<resources>
    <string name="app_name">SimpleEncryptorLib - Sample</string>

    <string name="content_txt1">This is SimpleEnchryptorLib android sample application.
        \nIt demonstrates simple action enchrypt string and dechrypt it to original case</string>

    <string name="content_txt2">
        The library is 100% compatible with Kotlin and Java applications. It has been created with Java language in
        the Android Studio and contains two samples in both Kotlin and Java.
        </string>

    <string name="txt_dechrypt">Dechrypt</string>
    <string name="txt_enchrypt">Enchrypt</string>
    <string name="txt_dechrypted_str">Dechrypted string</string>
    <string name="txt_enchrypted_str">Orginal string</string>
    <string name="txt_key_phrase">Key string:</string>
    <string name="txt_caution">Key phrase has to be minimum 18 character</string>
    <string name="txt_btn_open_java_sample">Open Java Activity</string>
    <string name="title_kotlin_sample">Kotlin Sample Activity</string>
    <string name="title_java_sample">Java Sample Activity</string>


</resources>
