<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sample.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/txt_about"
                android:textColor="@color/colorCaptionText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_caution"
                android:textColor="@color/colorCaution"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_key_phrase"
                    android:textColor="@color/colorCaptionText"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etKeyPhrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:text="Sample enchryption keyphrase"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:text="@string/txt_enchrypted_str"
                android:textColor="@color/colorCaptionText"
                android:textSize="17sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etOriginalTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="70dp"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnEnchrypt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:drawableStart="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:text="@string/txt_enchrypt" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:text="@string/txt_dechrypted_str"
                android:textColor="@color/colorCaptionText"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etEnchryptedTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="70dp"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnDechrypt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_keyboard_arrow_up_black_24dp"
                    android:drawableStart="@drawable/ic_keyboard_arrow_up_black_24dp"
                    android:text="@string/txt_dechrypt" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ivMAHForkMeOnGithub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/forkme_green" />
    </RelativeLayout>

</LinearLayout>
